@@ -1,6 +1,10 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Added Gecko/XUL/Hulahop as Pyjamas-Desktop engine; added pyjd.setup
+   and pyjd.run functions (which are dummy in pyjs); added ~/.pyjd/pyjdrc
+   file to configure use of either pywebkitgtk or hulahop
+
  * int() now raises ValueError
 
  * Added __getimtem__ to Exception
